<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.github.dependencyanalysis</groupId>
        <artifactId>dependency-analyzer-parent</artifactId>
        <version>${revision}</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>dependency-analyzer</artifactId>
    <packaging>jar</packaging>
    <name>Dependency Analyzer</name>
    <description>Maven dependency analysis tool</description>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <plugin-repository.resource-directory>${project.build.outputDirectory}/maven/plugin-repositories</plugin-repository.resource-directory>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.github.dependencyanalysis</groupId>
            <artifactId>dependency-analyzer-jdk8-models</artifactId>
        </dependency>
        <dependency>
            <groupId>io.github.dependencyanalysis</groupId>
            <artifactId>dependency-analyzer-artifact-path-maven-plugin</artifactId>
            <version>${artifact-path-plugin.version}</version>
            <type>zip</type>
            <classifier>repository</classifier>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
        </dependency>
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>${picocli.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.tngtech.archunit</groupId>
            <artifactId>archunit-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>${asm.version}</version>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-util</artifactId>
            <version>${asm.version}</version>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-tree</artifactId>
            <version>${asm.version}</version>
        </dependency>
        <dependency>
            <groupId>com.ibm.wala</groupId>
            <artifactId>com.ibm.wala.core</artifactId>
            <version>${wala.version}</version>
        </dependency>
        <dependency>
            <groupId>org.vineflower</groupId>
            <artifactId>vineflower</artifactId>
            <version>${vineflower.version}</version>
            <classifier>slim</classifier>
        </dependency>
    </dependencies>

    <build>
        <directory>${maven.multiModuleProjectDirectory}/target</directory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <environmentVariables>
                        <TEST_JDK8_HOME>${test.jdk8.home}</TEST_JDK8_HOME>
                    </environmentVariables>
                    <systemPropertyVariables>
                        <cia.analyzerVersion>${revision}</cia.analyzerVersion>
                        <cia.artifactPathPluginVersion>${artifact-path-plugin.version}</cia.artifactPathPluginVersion>
                        <cia.multiModuleProjectDirectory>${maven.multiModuleProjectDirectory}</cia.multiModuleProjectDirectory>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <executions>
                    <execution>
                        <id>filter-build-metadata</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/main/filtered-resources</directory>
                                    <filtering>true</filtering>
                                </resource>
                            </resources>
                            <delimiters>
                                <delimiter>@</delimiter>
                            </delimiters>
                            <useDefaultDelimiters>false</useDefaultDelimiters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>add-integration-test-source</id>
                        <phase>generate-test-sources</phase>
                        <goals>
                            <goal>add-test-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>src/integration-test/java</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <environmentVariables>
                        <TEST_JDK8_HOME>${test.jdk8.home}</TEST_JDK8_HOME>
                    </environmentVariables>
                    <systemPropertyVariables>
                        <cia.packagedJar>${maven.multiModuleProjectDirectory}/target/dependency-analyzer.jar</cia.packagedJar>
                        <cia.analyzerVersion>${revision}</cia.analyzerVersion>
                        <cia.artifactPathPluginVersion>${artifact-path-plugin.version}</cia.artifactPathPluginVersion>
                        <cia.multiModuleProjectDirectory>${maven.multiModuleProjectDirectory}</cia.multiModuleProjectDirectory>
                    </systemPropertyVariables>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-artifact-path-plugin-repository</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>io.github.dependencyanalysis</groupId>
                                    <artifactId>dependency-analyzer-artifact-path-maven-plugin</artifactId>
                                    <version>${artifact-path-plugin.version}</version>
                                    <type>zip</type>
                                    <classifier>repository</classifier>
                                    <outputDirectory>${plugin-repository.resource-directory}</outputDirectory>
                                    <destFileName>dependency-analyzer-artifact-path-maven-plugin-${artifact-path-plugin.version}-repository.zip</destFileName>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <finalName>dependency-analyzer</finalName>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>io.github.dependencyanalysis.cli.DependencyAnalyzerCli</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <executions>
                    <execution>
                        <id>checkstyle-validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <configLocation>sun_checks.xml</configLocation>
                            <suppressionsLocation>${project.basedir}/checkstyle-suppressions.xml</suppressionsLocation>
                            <suppressionsFileExpression>org.checkstyle.sun.suppressionfilter.config</suppressionsFileExpression>
                            <consoleOutput>true</consoleOutput>
                            <failsOnError>true</failsOnError>
                            <violationSeverity>warning</violationSeverity>
                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
